fix: docs regeneration
